# C_experience

./: README.md  allocation_problems.c  practise1.c  practise2.c  practise4.c
C++ object oriented/: basis.cpp  basis.h  class_alocations.cpp  exceptions.cpp  readme.txt  stl.cpp
C++ object oriented/class_BinaryTree/: exceptionTree.h  tree.h
C++ object oriented/class_Bird/: Bird.cpp  Bird.h  main.cpp  readme.txt
C++ object oriented/class_Color/: color.cpp  color.h  main.cpp  readme.txt
C++ object oriented/class_Currency/: Currency.cpp  Currency.h  main.cpp  readme.md
C++ object oriented/class_Date/: date.cpp  date.h  main.cpp  readme.md  readme.txt
C++ object oriented/class_EasterEgg/: card.cpp  card.h  element.h  history.cpp  history.h  main.cpp  pattern.cpp  pattern.h  readme.txt
C++ object oriented/class_Ecosystem/: animal.h  ecosystem.cpp  ecosystem.h  fish.h  main.cpp  organism.cpp  organism.h  plant.h  rose.h
C++ object oriented/class_FantasyFight/: ArcaneMissilesSpell.cpp  ArcaneMissilesSpell.h  Character.cpp  Character.h  HealingTouchSpell.cpp  HealingTouchSpell.h  Spell.cpp  Spell.h  Warlock.cpp  Warlock.h  Warrior.cpp  Warrior.h  main.cpp  readme.txt
C++ object oriented/class_Tree/: CMakeLists.txt  compressed_Tree.cpp  expr_tree.hpp  expr_tree_negation.cxx  expr_tree_negation.hpp  expr_tree_number.cxx  expr_tree_number.hpp  expr_tree_subtraction.cxx  expr_tree_subtraction.hpp  main.cxx  parser.cxx  parser.hpp
C++ orient objected/: basis.cpp  basis.h
student projects/: practise1.c  practise2.c  practise3.c  practise4.c
(+79 files in other folders)
